:bug: fix tooltip behind modal window

--- a/assets/styles/global/_overrides.scss
+++ b/assets/styles/global/_overrides.scss
@@ -31,5 +31,5 @@ body {
 }
 
 .tooltip{
-  z-index: 5;
+  z-index: 999;
 }
